Fix alignment of links.

--- a/themes/jain/assets/scss/meta.scss
+++ b/themes/jain/assets/scss/meta.scss
@@ -82,6 +82,7 @@
             justify-content: flex-end;
             flex-wrap: wrap;
             margin: 5px;
+            align-content: flex-end;
 
             a {
                 display: flex;
